--- a/index.html
+++ b/index.html
@@ -1,8 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <p>sllfljdfld</p>
-</head>
-<body></body>
-</html>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./index.css" />
+    <title>Witflix | Browse</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
 
+  <body>
+    <header>
+      <p>WitFlix</p>
+      <nav>
+        <a href="">Topic 1</a>
+        <a href="">Topic 2</a>
+        <a href="">Topic 3</a>
+        <a href="">Topic 4</a>
+      </nav>
+      <div class="user-panel">
+        <input type="text" placeholder="Search.." />
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="fa-solid fa-bell"></i>
+        <img class="avatar" src="https://picsum.photos/50" />
+      </div>
+    </header>
+    <main class="hero"></main>
+    <section class="suggestion"></section>
+    <footer></footer>
+  </body>
+</html>
