--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <header>
-      <p>WitFlix</p>
+      <p>WitFlix<p>
       <nav>
         <a href="">Topic 1</a>
         <a href="">Topic 2</a>
@@ -26,11 +26,32 @@
       <div class="user-panel">
         <input type="text" placeholder="Search.." />
         <i class="fa-solid fa-magnifying-glass"></i>
-        <i class="fa-solid fa-bell"></i>
+        <i class="fa-solid fa-bell fa-3x"></i>
         <img class="avatar" src="https://picsum.photos/50" />
       </div>
     </header>
-    <main class="hero"></main>
+    <main class="hero">
+      <div><h1>MOVIE NAME</h1>
+      <div>
+        <span>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          7.3 IMDB
+        </span>
+        <span>16+</span>
+        <span>2 h 21 min</span>
+      </div>
+      <p></p>
+      <div><p><span>Starring:</span>Lorem ipsum,Lorem ipsum, Lorem ipsum</p>
+      <p><span>Genre:</span>Lorem, İpsum, Color</p>
+      <p><span>Tags:</span>Lorem, İpsum, Color</p>
+      </div>
+      <button><i class="fa-solid fa-play"></i>Play Now</button>
+
+    </main>
     <section class="suggestion"></section>
     <footer></footer>
   </body>
