search işareti ayarlandı

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <header>
-      <p>WitFlix<p>
+      <h1>WitFlix</h1>
       <nav>
         <a href="">Topic 1</a>
         <a href="">Topic 2</a>
@@ -31,26 +31,34 @@
       </div>
     </header>
     <main class="hero">
-      <div><h1>MOVIE NAME</h1>
-      <div>
-        <span>
-          <i class="fa-solid fa-star"></i>
-          <i class="fa-solid fa-star"></i>
-          <i class="fa-solid fa-star"></i>
-          <i class="fa-solid fa-star"></i>
-          <i class="fa-regular fa-star"></i>
-          7.3 IMDB
-        </span>
-        <span>16+</span>
-        <span>2 h 21 min</span>
-      </div>
-      <p></p>
-      <div><p><span>Starring:</span>Lorem ipsum,Lorem ipsum, Lorem ipsum</p>
-      <p><span>Genre:</span>Lorem, İpsum, Color</p>
-      <p><span>Tags:</span>Lorem, İpsum, Color</p>
-      </div>
-      <button><i class="fa-solid fa-play"></i>Play Now</button>
+      <div class="main-movie">
+        <h2>Movie Name</h2>
+        <div class="movie-info">
+          <span class="user-rating">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            7.3 IMDB
+          </span>
+          <span class="content-rating">16+</span>
+          <span class="movie-duration">2 h 21 min</span>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi et
+          eligendi reprehenderit, aliquam iste porro ex atque nesciunt sapiente
+          explicabo. Totam dolores deleniti ad accusantium? Earum accusantium
+          laborum aliquid ullam.
+        </p>
 
+        <div class="movie-details">
+          <p><span>Starring:</span>Lorem ipsum,Lorem ipsum, Lorem ipsum</p>
+          <p><span>Genre:</span>Lorem, İpsum, Color</p>
+          <p><span>Tags:</span>Lorem, İpsum, Color</p>
+        </div>
+        <button><i class="fa-solid fa-play"></i>Play Now</button>
+      </div>
     </main>
     <section class="suggestion"></section>
     <footer></footer>
