suggestion ve footer html'e eklendi

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="user-panel">
         <input type="text" placeholder="Search.." />
         <i class="fa-solid fa-magnifying-glass"></i>
-        <i class="fa-solid fa-bell fa-3x"></i>
+        <i class="fa-solid fa-bell fa-2x"></i>
         <img class="avatar" src="https://picsum.photos/50" />
       </div>
     </header>
@@ -60,7 +60,115 @@
         <button><i class="fa-solid fa-play"></i>Play Now</button>
       </div>
     </main>
-    <section class="suggestion"></section>
-    <footer></footer>
+    <section class="suggestion">
+      <div class="suggestion-row">
+        <div class="suggestion-row-title">
+          <h3>Popular Movies</h3>
+          <a href="#">View All</a>
+        </div>
+        <div class="suggestion-movies">
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <span class="content-rating">16+</span>
+                <span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="suggestion-row">
+        <div class="suggestion-row-title">
+          <h3>Recommended for You</h3>
+          <a href="#">View All</a>
+        </div>
+        <div class="suggestion-movies">
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer-navigation">
+        <nav>
+          <a href="">Terms of Use</a>
+          <a href="">Privacy Policy</a>
+          <a href="">FAQ</a>
+          <a href="">Watch List</a>
+        </nav>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+          perspiciatis impedit voluptate dolores quidem quis id ullam, nulla
+          voluptatibus, cum enim sed sint et vitae cupiditate ipsum velit fugit
+          reiciendis aliquam debitis eos voluptas minus. Necessitatibus repellat
+          consequatur placeat ut?
+        </p>
+      </div>
+      <div class="social-navigation">
+        <h5>Follow Us</h5>
+        <div>
+          <i class="fa-brands fa-square-facebook fa-2x"></i>
+          <i class="fa-brands fa-square-x-twitter fa-2x"></i>
+          <i class="fa-brands fa-youtube fa-2x"></i>
+        </div>
+      </div>
+      <div class="mobile-app-navigation">
+        <h5>Apps</h5>
+        <div>
+          <img src="./assets/app-store.png" />
+          <img src="./assets/google-play.png" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
