hamburger menu ve scroll eklendi

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         <i class="fa-solid fa-bell fa-2x"></i>
         <img class="avatar" src="https://picsum.photos/50" />
       </div>
+
+      <div class="hamburger">
+        <i class="fa-solid fa-bars fa-2x"></i>
+      </div>
     </header>
     <main class="hero">
       <div class="main-movie">
@@ -69,7 +73,7 @@
         <div class="suggestion-movies">
           <div class="movie-card">
             <div class="movie-detail-container">
-              <h4>Movie</h4>
+              <h4>Movie Name</h4>
               <div class="movie-info">
                 <span class="content-rating">16+</span>
                 <span class="movie-duration">2 h 21 min</span>
@@ -79,7 +83,7 @@
           </div>
           <div class="movie-card">
             <div class="movie-detail-container">
-              <h4>Movie</h4>
+              <h4>Movie Name</h4>
               <div class="movie-info">
                 <span class="content-rating">16+</span
                 ><span class="movie-duration">2 h 21 min</span>
@@ -89,10 +93,50 @@
           </div>
           <div class="movie-card">
             <div class="movie-detail-container">
-              <h4>Movie</h4>
+              <h4>Movie Name</h4>
               <div class="movie-info">
                 <span class="content-rating">16+</span
                 ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie Name</h4>
+              <div class="movie-info">
+                <span class="content-rating">16+</span>
+                <span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie Name</h4>
+              <div class="movie-info">
+                <span class="content-rating">16+</span>
+                <span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie Name</h4>
+              <div class="movie-info">
+                <span class="content-rating">16+</span>
+                <span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie Name</h4>
+              <div class="movie-info">
+                <span class="content-rating">16+</span>
+                <span class="movie-duration">2 h 21 min</span>
               </div>
               <button><i class="fa-solid fa-play"></i> Play Now</button>
             </div>
@@ -107,7 +151,7 @@
         <div class="suggestion-movies">
           <div class="movie-card">
             <div class="movie-detail-container">
-              <h4>Movie</h4>
+              <h4>Movie Name</h4>
               <div class="movie-info">
                 <span class="content-rating">16+</span
                 ><span class="movie-duration">2 h 21 min</span>
@@ -117,7 +161,7 @@
           </div>
           <div class="movie-card">
             <div class="movie-detail-container">
-              <h4>Movie</h4>
+              <h4>Movie Name</h4>
               <div class="movie-info">
                 <span class="content-rating">16+</span
                 ><span class="movie-duration">2 h 21 min</span>
@@ -127,7 +171,7 @@
           </div>
           <div class="movie-card">
             <div class="movie-detail-container">
-              <h4>Movie</h4>
+              <h4>Movie Name</h4>
               <div class="movie-info">
                 <span class="content-rating">16+</span
                 ><span class="movie-duration">2 h 21 min</span>
