--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <h3>Recommended for You</h3>
           <a href="#">View All</a>
         </div>
-        <div class="suggestion-movies">
+        <div class="suggestion-movies-2">
           <div class="movie-card">
             <div class="movie-detail-container">
               <h4>Movie Name</h4>
